# tcp_example

./: .gitignore  CMakeLists.txt  README.md  build.sh  http_server_main.cpp  tcp_client.c  tcp_client_v1.c  tcp_client_v2.cpp  tcp_server.c  tcp_server_v2.cpp  test_tcp.cpp  test_tcp_server.cpp
html/: index.html
include/: http_request.hpp  http_server.hpp  tcp_client.hpp  tcp_public.hpp  tcp_server.hpp
src/: http_request.cpp  http_server.cpp  tcp_client.cpp  tcp_public.cpp  tcp_server.cpp
test/: test_tcp_10client.cpp  test_tcp_communication.cpp  test_tcp_parallel_comm.cpp
